--- a/src/components/sections/Projects/Projects.module.scss
+++ b/src/components/sections/Projects/Projects.module.scss
@@ -1,10 +1,13 @@
+@import '../../../styles/settings.scss';
+@import '../../../styles/typography.scss';
 
 .project_container {
-  margin: 70px 0;
+  padding: 80px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 80px;
+  position: relative;
 
   .project_info {
     flex: 3;
@@ -52,4 +55,18 @@
     z-index: -1;
 
   }
+}
+
+.project_container::after {
+  position: absolute;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 1px;
+  background: $color-dark;
+  opacity: 0.2;
+}
+
+.project_container:nth-child(1) {
+  padding-top: 0;
 }
