on scroll effects and image adjustments

--- a/src/components/sections/Hero/Hero.module.scss
+++ b/src/components/sections/Hero/Hero.module.scss
@@ -138,7 +138,7 @@
     opacity: 0.5;
     top: 0;
     right: 15px;
-    transform-origin: bottom;
+    transform-origin: top;
     animation: underline_scroll 6s infinite ease-in-out;
     animation-delay: 3s;
   }
