--- a/src/components/sections/Projects/Projects.module.scss
+++ b/src/components/sections/Projects/Projects.module.scss
@@ -1,72 +1,9 @@
-@import '../../../styles/settings.scss';
-@import '../../../styles/typography.scss';
 
-.project_container {
-  padding: 80px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 80px;
+.projects {
   position: relative;
+  top: -80px;
 
-  .project_info {
-    flex: 3;
-
-    .title {
-      font-size: 70px;
-      font-weight: 500;
-      margin-left: -5px;
-    }
-
-    .technologies {
-      font-size: 22px;
-      text-transform: uppercase;
-      margin-bottom: 25px;
-      font-weight: 400;
-    }
-
-    .description {
-      font-size: 16px;
-      font-weight: 200;
-    }
-
-
+  .project_container:nth-child(1) {
+    padding-top: 0;
   }
-
-  .project_visuals {
-    position: relative;
-    height: 400px;
-    flex: 5;
-    border: 5px solid black;
-    border-radius: 20px;
-    background: grey;
-  }
-
-  .project_visuals::after {
-    content: '';
-    position: absolute;
-    bottom: -8px;
-    width: 100%;
-    background: black;
-    height: 10px;
-    opacity: 0.6;
-    border-radius: 10px;
-    filter: blur(5px);
-    z-index: -1;
-
-  }
-}
-
-.project_container::after {
-  position: absolute;
-  bottom: 0;
-  content: '';
-  width: 100%;
-  height: 1px;
-  background: $color-dark;
-  opacity: 0.2;
-}
-
-.project_container:nth-child(1) {
-  padding-top: 0;
 }
