--- a/src/components/features/Button/Button.module.scss
+++ b/src/components/features/Button/Button.module.scss
@@ -1,10 +1,34 @@
 @import '../../../styles/settings.scss';
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   background: $color-dark;
   color: $color-light;
   font-size: 24px;
-  // height: 60px;
+  height: 60px;
   width: 240px;
+  font-weight: 300;
+  cursor: pointer;
+  text-decoration: none;
+  position: relative;
+}
+
+.button::after {
+  content: '';
+  width: 100%;
+  height: 5px;
+  background: $color-gray;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform-origin: center;
+  transform: scale(0,1);
+  transition: all 0.5s;
+}
+
+.button:hover::after {
+  transform: scale(1,1);
 }
