--- a/src/components/features/Project/Project.module.scss
+++ b/src/components/features/Project/Project.module.scss
@@ -15,23 +15,67 @@
     flex-direction: column;
 
     .title {
-      font-size: 70px;
+      font-size: 80px;
       font-weight: 500;
     }
 
     .technologies {
-      font-size: 22px;
+      font-size: 18px;
       text-transform: uppercase;
-      margin: 5px 0 25px 0;
+      margin: 5px 0 10px 0;
       font-weight: 400;
     }
 
     .description {
-      font-size: 16px;
+      font-size: 22px;
       font-weight: 200;
     }
 
-    .title, .technologies, .description {
+    .actions {
+      margin-top: 10px;
+
+      .action {
+        position: relative;
+        display: flex;
+        align-items: center;
+
+        .arrow {
+          content: '';
+          width: 0px;
+          height: 1px;
+          background: $color-dark;
+          opacity: 0.4;
+          margin-right: 5px;
+          transform-origin: left;
+          transform: scaleX(0);
+          transition: all 1s;
+        }
+
+        .action_button {
+          color: $color-dark;
+          text-decoration: none;
+          font-size: 16px;
+          text-transform: uppercase;
+          opacity: 0.4;
+          display: block;
+          font-weight: 300;
+          margin-left: -4px;
+          transition: all 0.5s;
+        }
+      }
+
+      .action:hover .arrow {
+        width: 30px;
+        transform: scaleX(1);
+      }
+
+      .action:hover .action_button {
+        opacity: 0.7;
+      }
+
+    }
+
+    .title, .technologies, .description, .actions {
       position: relative;
       display: inline-block;
       visibility: hidden;
@@ -41,7 +85,7 @@
 
   .project_info.show {
 
-    .title, .technologies, .description {
+    .title, .technologies, .description, .actions {
       animation: showText 0.8s;
       animation-fill-mode: forwards;
     }
@@ -55,7 +99,7 @@
       }
     }
 
-    .title::after, .technologies::after, .description::after {
+    .title::after, .technologies::after, .description::after, .actions::after {
       position: absolute;
       content: '';
       top: 0;
@@ -126,7 +170,7 @@
 
         .foreground {
           position: absolute;
-          left: -12%;
+          left: -13%;
           bottom: -12%;
           height: 250px;
 
@@ -165,6 +209,10 @@
     z-index: -1;
 
   }
+}
+
+.project_container:first-child {
+  padding-top: 0;
 }
 
 .project_container::after {
