--- a/src/components/sections/Hero/Hero.module.scss
+++ b/src/components/sections/Hero/Hero.module.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/settings.scss';
 @import '../../../styles/typography.scss';
 
-
 .hero {
   margin-top: 10vh;
   height: 75vh;
@@ -9,7 +8,6 @@
   flex-direction: column;
   position: relative;
   justify-content: center;
-
 
   // Name and role
 
@@ -212,3 +210,5 @@
     visibility: visible;
   }
 }
+
+@import './Hero_responsive.scss';
