--- a/src/components/sections/Hero/Hero_responsive.scss
+++ b/src/components/sections/Hero/Hero_responsive.scss
@@ -1,154 +1,187 @@
-@media (min-height: 1080px) {
 
-  .hero .info {
-    padding-top: 10%;
-  }
-}
+// VERTICAL (from 300-600) (360x640 - 800x1280)
 
+@media (min-width: 300px) and (min-height: 600px) and (max-width: 850px) {
 
-@media (max-height: 768px) {
+  .home .hero .introduction {
 
-  .hero .info {
-    padding-top: 3%;
-  }
-}
+    .name {
+      font-size: 55px;
 
-
-@media (max-width: 1440px) {
-
-  .hero {
-
-    .introduction .name {
-      font-size: 110px;
-      margin-left: -2px;
+      span { display: block; }
     }
 
-    .introduction .role {
-      font-size: 40px;
-      margin-left: 0px;
-    }
+    .role { font-size: 20px; }
   }
-}
 
+  .home .hero .info {
+    flex-direction: column-reverse;
+    margin: 3vh 0;
+    gap: 3vh;
 
-@media (max-width: 1024px) {
+    .about {
+      width: auto;
+      padding: 0;
 
-  .hero {
-
-    .introduction .name {
-      font-size: 120px;
-      margin-left: -2px;
-    }
-
-    .introduction .role {
-      font-size: 35px;
-      margin-left: 0px;
+      .text .about_me { font-size: 14px; }
+      .links { display: none; }
     }
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 350px) and (min-height: 700px) and (max-width: 850px) {
 
-  .hero {
+  .home .hero .introduction .name { font-size: 60px; }
 
-    .introduction .name {
-      font-size: 100px;
-      margin-left: -6px;
+  .home .hero .info {
+    .buttons a { width: 50%; height: 40px; font-size: 16px; }
+    .about .text .about_me { font-size: 16px; }
+  }
+
+  .home .scroll_container .scroll { font-size: 10px; }
+}
+
+@media (min-width: 400px) and (min-height: 850px) and (max-width: 850px) {
+
+  .home .hero .introduction {
+    .name { font-size: 80px; }
+    .role { font-size: 30px; }
+  }
+
+  .home .hero .info {
+    .buttons a { height: 45px; font-size: 18px; }
+    .about .text .about_me { font-size: 18px; }
+  }
+}
+
+@media (min-width: 600px) and (min-height: 950px) and (max-width: 850px) {
+
+  .home .hero .introduction {
+    .name { font-size: 90px; }
+    .role { font-size: 35px; }
+  }
+
+  .home .hero .info {
+    flex-direction: row;
+    margin: 5vh 0;
+    justify-content: space-between;
+
+    .buttons a { width: 200px; height: 45px; font-size: 18px; }
+
+    .about {
+      width: 300px;
+      padding-right: 30px;
+
+      .text .about_me { font-size: 16px; }
+      .links { 
+        display: block; 
+
+        a { font-size: 14px; }
+      }
     }
+  }
 
-    .introduction .role {
-      font-size: 35px;
-      margin-left: -1px;
+  .home .scroll_container .scroll { font-size: 12px; }
+}
+
+@media (min-width: 740px) and (min-height: 950px) and (max-width: 850px) {
+
+  .home .hero .introduction {
+    .name { font-size: 110px; }
+    .role { font-size: 40px; }
+  }
+
+  .home .hero .info {
+    .buttons a { width: 250px; height: 65px; font-size: 26px; }
+
+    .about {
+      width: 350px;
+
+      .text .about_me { font-size: 20px; }
+      .links a { font-size: 18px; }
     }
+  }
+}
 
-    .info {
-      flex-direction: column-reverse;
+// HORIZONTAL (from 600x300) (800x360 - 1920x1080)
+
+@media (min-width: 800px) and (max-height: 550px) {
+
+  .home .hero .introduction {
+    .name { font-size: 80px; }
+  }
+
+  .home .hero .info {
+    .buttons a { width: 180px; }
+
+    .about {
+      width: 320px;
+
+      .text .about_me { font-size: 15px; }
+      .links a { font-size: 12px; }
+    }
+  }
+}
+
+@media (min-width: 900px) and (min-height: 550px) {
+
+  .home .hero .info {
+    .buttons a { width: 200px; height: 45px; font-size: 18px; }
+
+    .about {
+      width: 350px;
+      gap: 10px;
+
+      .text .about_me { font-size: 18px; }
+      .links a { font-size: 14px; }
+    }
+  }
+
+  .home .scroll_container .scroll { font-size: 8px; }
+}
+
+@media (min-width: 1000px) and (min-height: 700px) {
+
+  .home .hero .introduction {
+
+    .name { 
+      font-size: 100px; 
+      span { display: block; }
+    }
+    .role { font-size: 40px; }
+  }
+
+  .home .hero .info {
+    .buttons a { width: 250px; height: 60px; font-size: 24px; }
+
+    .about {
+      width: 440px;
       gap: 20px;
 
-      .about {
-        max-width: 550px;
-
-        .text .about_me {
-          font-size: 30px;
-        }
-
-        .links {
-          display: none;
-        }
-      }
-
-      .buttons {
-        display: block;
-        gap: 20px;
-
-        a {
-          height: 60px;
-          margin-bottom: 20px;
-        }
-      }
+      .text .about_me { font-size: 24px; }
+      .links a { font-size: 18px; }
     }
   }
+
+  .home .scroll_container .scroll { font-size: 12px; }
 }
 
-@media (max-width: 640px) {
+@media (min-width: 1400px) and (min-height: 800px) {
 
-  .hero {
+  .home .hero .introduction {
 
-    .introduction .name {
-      font-size: 90px;
-      margin-left: -2px;
-    }
-
-    .introduction .role {
-      font-size: 30px;
-      margin-left: 0px;
-    }
-
-    .info .about .text .about_me {
-      font-size: 25px;
-    }
+    .name { font-size: 110px; }
+    .role { font-size: 50px; }
   }
-}
 
+  .home .hero .info {
+    .buttons a { width: 270px; height: 65px; font-size: 26px; }
 
-@media (max-width: 425px) {
+    .about {
+      width: 490px;
 
-  .hero {
-
-    .introduction .name {
-      font-size: 60px;
-      margin-left: -2px;
-    }
-
-    .introduction .role {
-      font-size: 18px;
-      margin-left: 0px;
-    }
-
-    .info .about .text .about_me {
-      font-size: 20px;
-    }
-
-    .info .buttons a {
-      height: 50px;
-    }
-  }
-}
-
-@media (max-width: 425px) and (max-height: 700px) {
-
-  .hero {
-
-    .introduction .name {
-      font-size: 50px;
-    }
-
-    .introduction .role {
-      font-size: 18px;
-    }
-
-    .info .about .text .about_me {
-      font-size: 20px;
+      .text .about_me { font-size: 26px; }
+      .links a { font-size: 20px; }
     }
   }
 }
