refactor css and change hero text

--- a/src/components/sections/Hero/Hero.module.scss
+++ b/src/components/sections/Hero/Hero.module.scss
@@ -41,7 +41,7 @@
       .buttons {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        // justify-content: space-between;
         gap: 15px;
         
         a { 
