--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,8 +10,10 @@ $fw-light: 100;
 $fw-medium: 200;
 $fw-semibold: 300;
 $fw-bold: 400;
+$fw-black: 500;
 
 $mobile: 425px;
 $tablet: 768px;
 $desktop: 1024px;
+$desktop-l: 1200px;
 
