--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,4 @@
-@import './settings.scss';
-@import './typography.scss';
+@import './variables.scss';
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -8,13 +7,21 @@
 body {
   margin: 0;
   padding: 0;
-  background: $color-light;
-  font-family: $font-text;
-  font-size: $base-size;
-  font-weight: 200;
-  color: $color-dark;
+  background: $clr-light;
+  font-family: $ff-regular;
+  font-size: $fs-regular;
+  font-weight: $fw-medium;
+  color: $clr-dark;
 }
 
 a {
   text-decoration: none;
+}
+
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
 }
